Fix sidebar layout issue on mobile
Broken by commit 'Use rgba isntead of opacity ...'

--- a/src/css/modules.css
+++ b/src/css/modules.css
@@ -150,6 +150,15 @@
 	margin: 1.5em 0 1.2em;
 }
 
+@media (max-width: 29.99em) {
+	
+	.sidebar-inner {
+		width: 15.76em;
+		margin: 0 auto;
+	}
+	
+}
+
 
 /* ===== Top navigation ===== */
 
